--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <p>Featured Rooms</p>
     <h1 class="title">Rooms & Suites</h1>
-
+    <h1>Hello</h1>
     <div class="" id="container">
       <div>
         <img src="/image/1.png" alt="ehhehehehehe" class="img" />
